添加通用模板&添加图片

--- a/public/src/admin/pages/official/advert/advert.less
+++ b/public/src/admin/pages/official/advert/advert.less
@@ -1,4 +1,40 @@
 
-.test{
-    display: none;
+@import './../../../components/edit-list/edit-list.less';
+
+/*
+.advert-picture{
+    width: 200px;
 }
+
+.advert-title{
+    width: 200px;
+}
+
+.advert-link{
+    width: 320px;
+}
+
+.advert-order{
+    width: 80px;
+}
+
+.activity-advert-picture{
+    width: 120px;
+}
+
+.activity-advert-title{
+    width: 210px;
+}
+
+.activity-advert-subtitle{
+    width: 210px;
+}
+
+.activity-advert-link{
+    width: 180px;
+}
+
+.activity-advert-order{
+    width: 80px;
+}
+*/
