--- a/public/src/common/reset.less
+++ b/public/src/common/reset.less
@@ -7,19 +7,16 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
   border: 0;
-  font-family: inherit;
-  font-size: 100%;
-  font-style: inherit;
-  font-weight: inherit;
   margin: 0;
   outline: 0;
   padding: 0;
+  font-size: 100%;
   vertical-align: baseline;
 }
 :focus { outline: 0 }
 body { line-height: 1 }
 ol, ul { list-style: none }
-table { border-collapse: separate; border-spacing: 0 }
+table { border-collapse: collapse; border-spacing: 0 }
 caption, th, td { font-weight: normal; text-align: left }
 blockquote:before, blockquote:after, q:before, q:after { content: "" }
 blockquote, q { quotes: "" "" }
