--- a/public/src/admin/common/common.less
+++ b/public/src/admin/common/common.less
@@ -1,20 +1,25 @@
 
 @import './settings.less';
+/*
+@import './../../common/reset.less';
+@import './../components/header/header.less';
+@import './../components/sidebar/sidebar.less';
+@import './../components/content/content.less';
+*/
 
 html, body{
+    width: 100%;
+    height: 100%;
     font-size: 14px;
     font-family: "Microsoft YaHei","SamHei";
 }
 
 .wrapper{
-    width: @design-width;
-    margin: 0 auto;
     position: relative;
 }
 
 .main{
-    float: left;
-    width: @maing-width;
+    overflow: hidden;
 }
 
 .clearfix{
