--- a/public/src/admin/common/settings.less
+++ b/public/src/admin/common/settings.less
@@ -1,4 +1,4 @@
 
 @design-width: 1200px;
-@sidebar-width: 260px;
-@maing-width: @design-width - @sidebar-width;
+@sidebar-width: 200px;
+@main-width: @design-width - @sidebar-width;
