调整模块结构

--- a/public/src/admin/components/sidebar/sidebar.less
+++ b/public/src/admin/components/sidebar/sidebar.less
@@ -5,11 +5,11 @@
 
 .sidebar{
     color: #fff;
-    float: left;
     width: @sidebar-width;
-    padding-bottom: 100%;
-    margin-bottom: -100%;
-    display: inline-block;
+    height: 100%;
+    left: @sidebar-width;
+    margin-left: -@sidebar-width;
+    position: fixed;
     background-color: @sidebar_background_color;
 }
 
