--- a/public/src/admin/components/content/content.less
+++ b/public/src/admin/components/content/content.less
@@ -1,9 +1,11 @@
 
+@import './../../common/settings.less';
+
 .content{
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 50px;
-    background-color: #515a58;
+    background-color: @content-background-color;
 }
 
 .site-path{
@@ -12,8 +14,9 @@
     line-height: 40px;
 }
 
-.edit-area{
+.edit-area-wrap{
     overflow: auto;
     max-width: 1280px;
+    min-width: 1000px;
     margin: 0 auto;
 }
