调整样式:侧边栏固定，右边高度自适应

--- a/public/src/admin/common/settings.less
+++ b/public/src/admin/common/settings.less
@@ -1,4 +1,4 @@
 
-@design-width: 1200px;
 @sidebar-width: 200px;
-@main-width: @design-width - @sidebar-width;
+
+@content-background-color: #515a58;
