--- a/public/src/admin/common/common.less
+++ b/public/src/admin/common/common.less
@@ -1,21 +1,17 @@
 
 @import './settings.less';
-/*
-@import './../../common/reset.less';
-@import './../components/header/header.less';
-@import './../components/sidebar/sidebar.less';
-@import './../components/content/content.less';
-*/
 
 html, body{
     width: 100%;
     height: 100%;
     font-size: 14px;
     font-family: "Microsoft YaHei","SamHei";
+    background-color: @content-background-color;
 }
 
 .wrapper{
     position: relative;
+    padding-left: @sidebar-width;
 }
 
 .main{
