完成后台管理-微官网模块

--- a/public/src/admin/common/common.less
+++ b/public/src/admin/common/common.less
@@ -9,6 +9,10 @@ html, body{
     background-color: @content-background-color;
 }
 
+input, textarea, button{
+    font-family: "Microsoft YaHei","SamHei";
+}
+
 .wrapper{
     position: relative;
     padding-left: @sidebar-width;
@@ -21,4 +25,17 @@ html, body{
 .clearfix{
     overflow: hidden;
     *zoom: 1;
+}
+
+.btn{
+    color: #fff;
+    width: 200px;
+    line-height: 36px;
+    background: #1897bf;
+    text-align: center;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: inline-block;
 }
