--- a/public/src/admin/components/edit-area/settings.less
+++ b/public/src/admin/components/edit-area/settings.less
@@ -1,5 +1,10 @@
-@table-item-height: 108px;
-@table-title-height: 40px;
 
 @picture-width: 100px;
 @picture-height: 70px;
+
+@edit-area-item-height: 108px;
+@edit-area-title-height: 40px;
+
+@edit-area-class-prefix: edit-area;
+@operation-class-prefix: operation;
+@edit-area-picture-class-prefix: picture;
