--- a/public/src/admin/components/edit-area/settings.less
+++ b/public/src/admin/components/edit-area/settings.less
@@ -4,6 +4,7 @@
 
 @edit-area-item-height: 108px;
 @edit-area-title-height: 40px;
+@edit-area-input-height: 35px;
 
 @edit-area-class-prefix: edit-area;
 @operation-class-prefix: operation;
