--- a/public/src/common/reset.less
+++ b/public/src/common/reset.less
@@ -4,7 +4,7 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
+fieldset, form, label, legend, button,
 table, caption, tbody, tfoot, thead, tr, th, td {
   border: 0;
   margin: 0;
