--- a/public/src/admin/pages/login/login.less
+++ b/public/src/admin/pages/login/login.less
@@ -98,12 +98,13 @@ html, body{
 
 .captcha-img{
     height: 38px;
+    cursor: pointer;
     margin-left: 15px;
     vertical-align: middle;
 }
 
 .captcha-wrap .input-area{
-    width: 120px;
+    width: 136px;
     margin-left: 15px;
 }
 
