输入框加上内边距

--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -59,6 +59,7 @@
 }
 
 .input-common(){
+    padding: 3px 8px;
     height: @edit-area-input-height;
     display: inline-block;
 }
@@ -76,6 +77,7 @@
 
 .@{edit-area-class-prefix}-date-input{
     width: 274px;
+    text-align: center;
     .input-common();
 }
 
@@ -83,6 +85,7 @@
     resize: none;
     width: 600px;
     height: 100px;
+    padding: 3px 8px;
 }
 
 .@{edit-area-class-prefix}-item, .@{edit-area-class-prefix}-item-input{
