完成静态页跳转逻辑

--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -54,8 +54,12 @@
     display: inline-block;
 }
 
-.@{edit-area-class-prefix}-textarea-row .@{edit-area-class-prefix}-label{
-    vertical-align: top;
+.@{edit-area-class-prefix}-textarea-row{
+    margin-top: 8px;
+    .@{edit-area-class-prefix}-label{
+        vertical-align: top;
+        line-height: 25px;
+    }
 }
 
 .input-common(){
@@ -151,6 +155,7 @@
 }
 
 .@{operation-class-prefix}-btn{
+    color: #000;
     cursor: pointer;
 }
 
