干货管理模块数据显示调整

--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -182,6 +182,7 @@
     }
 
     .@{operation-class-prefix}-blue-btn{
+        color: #fff;
         width: 80px;
         height: @edit-area-input-height;
         font-size: 16px;
