添加前端'添加'相关行为

--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -138,13 +138,18 @@
     cursor: pointer;
     font-size: 50px;
     position: absolute;
+    opacity: 0;
+    -moz-opacity: 0;
+    filter:alpha(opacity=0)
 }
 
 .@{edit-area-picture-class-prefix}-input-holder{
     color: #fff;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 35px;
+    cursor: pointer;
     text-align: center;
+    // position: relative;
     background: #7f7f7f;
 }
 
