--- a/public/src/admin/components/edit-area/operation/operation.less
+++ b/public/src/admin/components/edit-area/operation/operation.less
@@ -1,6 +1,10 @@
 
 @import './../settings.less';
 
+#form-target{
+    display:none;
+}
+
 // --- 通用操作模块样式 start ---
 
 .@{operation-class-prefix}-btn{
