--- a/public/src/wechat/components/navigation/navigation.less
+++ b/public/src/wechat/components/navigation/navigation.less
@@ -30,7 +30,9 @@
 }
 
 .navigation-img{
-    max-height: 100%;
+    display: block;
+    margin: 0 auto;
+    max-height: unit( 60px / @rem-design-unit, rem );
 }
 
 .navigation-text{
