--- a/public/src/wechat/pages/official.less
+++ b/public/src/wechat/pages/official.less
@@ -5,6 +5,7 @@
 
 .activity-column-wrap{
     overflow: hidden;
+    margin-top: unit( 45px / @rem-design-unit, rem );
     margin-bottom: unit( 30px / @rem-design-unit, rem );
 }
 
