--- a/public/src/wechat/components/advert/advert.less
+++ b/public/src/wechat/components/advert/advert.less
@@ -45,17 +45,17 @@
 .advert-title-mask{
     width: 100%;
     height: 100%;
-    opacity: 0.35;
+    opacity: 0.25;
     position: absolute;
     background: #fff;
 }
 
 .advert-title-content{
     color: #333;
-    text-indent: 0.5rem;
     position: relative;
     line-height: @advert-title-height;
     font-size: unit( 22px / @rem-design-unit, rem );
+    padding-left: unit( 10px / @rem-design-unit, rem );
 }
 
 // ----- 广告标题模块 end -----
