--- a/public/src/wechat/components/section/section.less
+++ b/public/src/wechat/components/section/section.less
@@ -37,6 +37,7 @@
 
 .section-column-item{
     overflow: hidden;
+    display: block;
     border-radius: 0.1rem;
     margin-bottom: unit( 15px / @rem-design-unit, rem );
 }
