--- a/public/src/wechat/pages/album.less
+++ b/public/src/wechat/pages/album.less
@@ -4,4 +4,5 @@
 .section-content{
     overflow: hidden;
     padding: unit( 15px / @rem-design-unit, rem );
+    margin-top: unit( 15px / @rem-design-unit, rem );
 }
