--- a/public/src/wechat/pages/official.less
+++ b/public/src/wechat/pages/official.less
@@ -16,11 +16,16 @@
     width: unit( 345px / @rem-design-unit, rem );
 }
 
+.activity-item{
+    min-height: unit( 480px / @rem-design-unit, rem );
+}
+
 .activity-column-left{
     margin-right: unit( 20px / @rem-design-unit, rem );
 }
 
 .activity-img-wrap{
+    display: block;
     overflow: hidden;
     height: unit( 360px / @rem-design-unit, rem );
 }
