--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -3,6 +3,9 @@
 
 @border-style: dotted #619bbe 1px;
 
+html{
+    margin-bottom: 1.866667rem;
+}
 .section-content{
     overflow: hidden;
     padding: unit( 15px / @rem-design-unit, rem );
