--- a/public/src/wechat/common/common.less
+++ b/public/src/wechat/common/common.less
@@ -6,16 +6,17 @@ html, body{
     margin: 0;
     padding: 0; 
     border: 0;
+    background: url( '/images/background.png' );
 }
 
 body {
     color: #000;
     line-height:1;
-    background: #fff;
     font-size: inherit;
     word-wrap: break-word;
+    padding-top: @header-height;
+    padding-bottom: @header-height;
     -webkit-text-size-adjust: none;
-    background: url( '/images/background.png' );
     font-family: "Microsoft YaHei","SamHei", Arial, sans-serif;
 }
 
