--- a/public/src/wechat/pages/album.less
+++ b/public/src/wechat/pages/album.less
@@ -6,3 +6,7 @@
     padding: unit( 15px / @rem-design-unit, rem );
     margin-top: unit( 15px / @rem-design-unit, rem );
 }
+
+body{
+    padding-bottom: 0px;
+}
