--- a/public/src/wechat/common/settings.less
+++ b/public/src/wechat/common/settings.less
@@ -10,3 +10,5 @@
 @content-background-color: rgba(255, 255, 255, 0.75);
 
 @font-color-blue: #004493;
+
+@header-height: unit( 120px / @rem-design-unit, rem );
