完成功能：活动介绍下拉显示效果

--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -88,3 +88,28 @@ html{
     width: unit( 16px / @rem-design-unit, rem );
     height: unit( 32px / @rem-design-unit, rem );
 }
+
+.vote-content-btn-normal{
+
+    .vote-content-btn-normal-img{
+        display: inline-block;
+    }
+
+    .vote-content-btn-close-img{
+        display: none;
+    }
+}
+
+.vote-content-btn-close{
+
+    width: unit( 32px / @rem-design-unit, rem );
+    height: unit( 16px / @rem-design-unit, rem );
+
+    .vote-content-btn-normal-img{
+        display: none;
+    }
+
+    .vote-content-btn-close-img{
+        display: inline-block;
+    }
+}
