--- a/public/src/wechat/pages/photo.less
+++ b/public/src/wechat/pages/photo.less
@@ -37,6 +37,7 @@ body{
     width: @thumbs-size;
     height: @thumbs-size;
     overflow: hidden;
+    border: solid #004493 2px;
 }
 
 .album-normal{
