--- a/public/src/wechat/pages/album.less
+++ b/public/src/wechat/pages/album.less
@@ -5,6 +5,21 @@
     overflow: hidden;
     padding: unit( 15px / @rem-design-unit, rem );
     margin-top: unit( 15px / @rem-design-unit, rem );
+
+    .section-link {
+		.section-column-title {
+			display: inline-block;
+			width: 4.4rem;
+		}
+    }
+
+    .section-list {
+    	.section-column-item {
+    		display: inline-block;
+    		width: 4.2rem;
+			margin: 0.12rem 0.12rem;
+    	}
+    }
 }
 
 body{
