--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -113,3 +113,20 @@ html{
         display: inline-block;
     }
 }
+
+ .section-link {
+        .section-column-title {
+            display: inline-block;
+            width: 4.4rem;
+        }
+    }
+
+    .section-list {
+        .section-column-item {
+            display: inline-block;
+            width: 4.2rem;
+            margin: 0.12rem 0.12rem;
+
+          
+        }
+    }
