添加交互：编辑/确认按钮

--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -77,6 +77,15 @@
 .@{edit-area-class-prefix}-input{
     width: 600px;
     .input-common();
+    &[readonly="readonly"]{
+        background: none;
+    }
+    &[readonly="true"]{
+        background: none;
+    }
+    &[readonly]{
+        background: none;
+    }
 }
 
 .@{edit-area-class-prefix}-date-input{
