--- a/public/src/admin/components/edit-area/operation/operation.less
+++ b/public/src/admin/components/edit-area/operation/operation.less
@@ -39,6 +39,10 @@
         display: inline-block;
         margin-left: 5px;
     }
+
+    .@{operation-class-prefix}-invalid-btn{
+        background: #777;
+    }
 }
 
 .@{operation-class-prefix}-icon{
