修改表格元素垂直居中实现方法

--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -101,6 +101,10 @@
     padding: 3px 8px;
 }
 
+.@{edit-area-class-prefix}-item{
+    vertical-align: middle;
+}
+
 .@{edit-area-class-prefix}-item, .@{edit-area-class-prefix}-item-input{
     font-size: 14px;
     text-align: center;
