--- a/public/src/admin/components/edit-area/edit-table/edit-table.less
+++ b/public/src/admin/components/edit-area/edit-table/edit-table.less
@@ -4,7 +4,7 @@
 // ----- 表格样式 start -----
 
 .@{edit-area-class-prefix}-row{
-    line-height: 108px;
+    height: 108px;
 }
 
 // ----- 表格样式 end -----
