--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -114,6 +114,13 @@
     width: 180px;
 }
 
+.input-file-name-wrap{
+    line-height: 24px;
+    margin-left: 5em;
+    margin-top: 0.5em;
+    display: none;
+}
+
 // --- 通用编辑区域演示 end ---
 
 .@{edit-area-picture-class-prefix}-wrap{
