调整表格样式

--- a/public/src/admin/components/edit-area/common.less
+++ b/public/src/admin/components/edit-area/common.less
@@ -102,12 +102,18 @@
 }
 
 .@{edit-area-class-prefix}-item{
+    word-wrap: break-word;
+    word-break: break-all;
     vertical-align: middle;
 }
 
 .@{edit-area-class-prefix}-item, .@{edit-area-class-prefix}-item-input{
     font-size: 14px;
     text-align: center;
+}
+
+.@{edit-area-class-prefix}-item-link{
+    max-width: 250px;
 }
 
 .@{edit-area-class-prefix}-item-operation{
