去处img全局样式中的max-width属性

--- a/public/src/wechat/components/section/section.less
+++ b/public/src/wechat/components/section/section.less
@@ -16,6 +16,10 @@
     height: unit( 128px / @rem-design-unit, rem );
 }
 
+.section-header-img{
+    max-width: 100%;
+}
+
 .section-content{
     color: #292929;
     word-wrap: break-word;
