完成瀑布流页面布局

--- a/public/src/wechat/components/navigation/navigation.less
+++ b/public/src/wechat/components/navigation/navigation.less
@@ -11,7 +11,7 @@
     position: fixed;
     bottom: 0px;
     width: 100%;
-    background: url( '/images/navigation-bg.png' ) no-repeat center;
+    background: url( '/images/navigation-bg.png' ) repeat-x center;
 }
 
 .navigation-container{
