--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -114,19 +114,39 @@ html{
     }
 }
 
- .section-link {
+.section-content {
+    @item-width: 4.2rem;
+    @item-margin: 0.12rem;
+
+    .section-link {
+        width: @item-width * 2 + @item-margin * 4;
+        margin: 0 auto;
+
         .section-column-title {
             display: inline-block;
-            width: 4.4rem;
+            width: (@item-width * 2 + @item-margin * 4) / 2 - 0.14rem;
         }
     }
 
     .section-list {
+        width: @item-width * 2 + @item-margin * 4 + 0.2rem;
+        margin: 0 auto;
+
+        .section-left-column {
+            width: @item-width + @item-margin * 2;
+            display: inline-block;
+        }
+
+        .section-right-column {
+            width: @item-width + @item-margin * 2;
+            display: inline-block;
+            vertical-align: top;
+        }
+
         .section-column-item {
             display: inline-block;
-            width: 4.2rem;
-            margin: 0.12rem 0.12rem;
-
-          
+            width:  @item-width;
+            margin: @item-margin;
         }
     }
+}
