--- a/public/src/wechat/pages/photo.less
+++ b/public/src/wechat/pages/photo.less
@@ -51,6 +51,7 @@ body{
 
 .album-fullscreen-play-btn-container{
     bottom: 0;
+    z-index: 99999;
     width: 100%;
     position: fixed;
     background: rgba(255, 255, 255, 0.2);
