完善微相册-略缩图显示方式

--- a/public/src/wechat/pages/photo.less
+++ b/public/src/wechat/pages/photo.less
@@ -41,7 +41,12 @@ body{
     border: solid #004493 2px;
 }
 
+.album-thumbs-img{
+    position: relative;
+}
+
 .album-normal-item{
+    width: unit( 140px / @rem-design-unit, rem );
     white-space: nowrap;
 }
 
