重命名&优化分页组件

--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -89,6 +89,10 @@ html{
     height: unit( 32px / @rem-design-unit, rem );
 }
 
+.vote-content-btn-img{
+    width: 100%;
+}
+
 .vote-content-btn-normal{
 
     .vote-content-btn-normal-img{
