--- a/public/src/wechat/components/advert/advert.less
+++ b/public/src/wechat/components/advert/advert.less
@@ -33,6 +33,10 @@
 
 @advert-title-height: unit( 45px / @rem-design-unit, rem );
 
+.advert-title-list{
+    display: none;
+}
+
 .advert-title-wrap{
     bottom: 0px;
     left: @horizontal-margin;
@@ -50,7 +54,7 @@
     background: #fff;
 }
 
-.advert-title-content{
+.advert-title-current{
     color: #333;
     position: relative;
     line-height: @advert-title-height;
