--- a/public/src/wechat/components/pagination/pagination.less
+++ b/public/src/wechat/components/pagination/pagination.less
@@ -1,13 +1,13 @@
 
 @import './../../common/settings.less';
 
-.load-btn-wrap{
+.pagination-wrap{
     overflow: hidden;
     background: #fff;
     height: unit( 100px / @rem-design-unit, rem );
 }
 
-.load-btn{
+.pagination{
     color: #fff;
     cursor: pointer;
     text-align: center;
@@ -17,10 +17,10 @@
     margin: unit( 20px / @rem-design-unit, rem ) auto;
 }
 
-.load-btn-action-info{
+.pagination-action-info{
     display: none;
 }
 
-.load-btn-action-parameters{
+#pagination-action-parameters{
     display: none;
 }
