调整图片显示

--- a/public/src/wechat/pages/official.less
+++ b/public/src/wechat/pages/official.less
@@ -32,7 +32,6 @@
 }
 
 .activity-img{
-    height: 100%;
     display: block;
 }
 
@@ -113,8 +112,8 @@
 .resource-img-wrap{
     float: left;
     overflow: hidden;
-    width: unit( 175px / @rem-design-unit, rem );
-    height: unit( 175px / @rem-design-unit, rem );
+    width: @resource-item-height;
+    height: @resource-item-height;
 }
 
 .resource-img{
