初步完成微投票异步加载数据

--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -1,5 +1,6 @@
 
 @import './../common/settings.less';
+@import './../components/pagination/pagination.less';
 
 @border-style: dotted #619bbe 1px;
 
