完成分页功能 & Fix bug

--- a/public/src/wechat/pages/album.less
+++ b/public/src/wechat/pages/album.less
@@ -1,5 +1,6 @@
 
 @import './../common/settings.less';
+@import './../components/pagination/pagination.less';
 
 .section-content{
     @item-width: 4.2rem;
