--- a/public/src/wechat/common/settings.less
+++ b/public/src/wechat/common/settings.less
@@ -12,3 +12,5 @@
 @font-color-blue: #004493;
 
 @header-height: unit( 120px / @rem-design-unit, rem );
+
+@content-font-size: unit( 30px / @rem-design-unit, rem );
