--- a/public/src/wechat/components/news/news.less
+++ b/public/src/wechat/components/news/news.less
@@ -22,5 +22,6 @@
 }
 
 .news-content{
+    font-size: unit( 26px / @rem-design-unit, rem );
     margin-left: unit( 12px / @rem-design-unit, rem );
 }
