--- a/public/src/wechat/components/section/section.less
+++ b/public/src/wechat/components/section/section.less
@@ -25,8 +25,8 @@
     word-wrap: break-word;
     border-radius: 0.2rem;
     overflow: hidden;
+    font-size: @content-font-size;
     background-color: @content-background-color;
-    font-size: unit( 22px / @rem-design-unit, rem );
     line-height: unit( 30px / @rem-design-unit, rem );
     margin-bottom: unit( 30px / @rem-design-unit, rem );
     padding: unit( 25px / @rem-design-unit, rem ) unit( 30px / @rem-design-unit, rem );
