--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -55,6 +55,7 @@ html{
 
 .vote-info-item-content{
     float: left;
+    font-size: @content-font-size;
     width: unit( 580px / @rem-design-unit, rem ); 
     line-height: unit( 85px / @rem-design-unit, rem );
 }
