--- a/public/src/wechat/components/advert/advert.less
+++ b/public/src/wechat/components/advert/advert.less
@@ -31,6 +31,7 @@
 
 .advert-pagination{
     right: 0;
+    z-index: 2015 !important;
     left: auto !important;
     bottom: 0 !important;
     text-align: right !important;
@@ -40,8 +41,16 @@
 
 .swiper-pagination-bullet{
     margin-top: unit( 12px / @rem-design-unit , rem ) !important;
-    // width: unit( 6px / @rem-design-unit, rem ) !important;
-    // height: unit( 6px / @rem-design-unit, rem ) !important;
+}
+
+.swiper-pagination-bullet{
+    border: solid #004693 1px;
+    opacity: inherit !important;
+    background: none !important;
+}
+
+.swiper-pagination-bullet-active{
+    background: #004693 !important;
 }
 
 // ----- 广告图片模块 end -----
@@ -65,11 +74,11 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, 0.70);
 }
 
 .advert-title-current{
-    color: #333;
+    color: #242424;
     position: relative;
     line-height: @advert-title-height;
     font-size: unit( 22px / @rem-design-unit, rem );
