--- a/public/src/wechat/components/header/header.less
+++ b/public/src/wechat/components/header/header.less
@@ -8,7 +8,7 @@
     position: fixed;
     text-align: center;
     height: @header-height;
-    background-color: #d1e5f6;
+    background-color: rgba(255, 255, 255, 0.92);
 }
 
 .logo{
