--- a/public/src/wechat/components/pagination/pagination.less
+++ b/public/src/wechat/components/pagination/pagination.less
@@ -11,6 +11,7 @@
     color: #fff;
     cursor: pointer;
     text-align: center;
+    font-size: unit( 24px / @rem-design-unit, rem );
     background: url( '/images/background.png' );
     width: unit( 710px / @rem-design-unit, rem );
     line-height: unit( 60px / @rem-design-unit, rem );
