--- a/public/src/wechat/pages/official.less
+++ b/public/src/wechat/pages/official.less
@@ -66,6 +66,11 @@
 
 @resource-item-height: unit( 160px / @rem-design-unit, rem );
 
+.resource-header{
+    background: url('/images/resource-title.png') no-repeat center;
+    background-size: 100%;
+}
+
 .resource-type-list{
     overflow: hidden;
 }
@@ -114,9 +119,6 @@
     overflow: hidden;
     width: @resource-item-height;
     height: @resource-item-height;
-}
-
-.resource-img{
 }
 
 .resource-info-wrap{
