完成微官网的Fxxx需求

--- a/public/src/wechat/pages/official.less
+++ b/public/src/wechat/pages/official.less
@@ -102,8 +102,13 @@
 }
 
 .resource-list{
+    display: none;
     overflow: auto;
     margin-top: unit( 15px / @rem-design-unit, rem );
+}
+
+.resource-list-active{
+    display: block;
 }
 
 .resource-item{
