--- a/public/src/wechat/components/navigation/navigation.less
+++ b/public/src/wechat/components/navigation/navigation.less
@@ -11,7 +11,7 @@
     position: fixed;
     bottom: 0px;
     width: 100%;
-    background: url( '/images/navigation-bg.png' ) repeat-x center;
+    background: #1e56a5;
 }
 
 .navigation-container{
@@ -37,7 +37,7 @@
 }
 
 .navigation-text{
-    color: #004493;
+    color: #fff;
     font-size: unit( 22px / @rem-design-unit, rem );
     line-height: unit( 40px / @rem-design-unit, rem );
 }
