--- a/public/src/wechat/components/pagination/pagination.less
+++ b/public/src/wechat/components/pagination/pagination.less
@@ -12,7 +12,7 @@
     cursor: pointer;
     text-align: center;
     font-size: unit( 24px / @rem-design-unit, rem );
-    background: url( '/images/background.png' );
+    background: #154b8a;
     width: unit( 710px / @rem-design-unit, rem );
     line-height: unit( 60px / @rem-design-unit, rem );
     margin: unit( 20px / @rem-design-unit, rem ) auto;
