--- a/public/src/wechat/pages/photo.less
+++ b/public/src/wechat/pages/photo.less
@@ -19,7 +19,7 @@ body{
 }
 
 .album-thumbs-container{
-    background: url( '/images/photo-bg.png' );
+    background: #1462af; 
     height: unit( 160px / @rem-design-unit, rem );
 }
 
@@ -59,7 +59,7 @@ body{
     z-index: 99999;
     width: 100%;
     position: fixed;
-    background: rgba(255, 255, 255, 0.2);
+    background: #0e5e9e; 
 }
 
 .album-fullscreen-play-btn{
@@ -81,3 +81,6 @@ body{
     opacity: 1;
 }
 
+html, body{
+    background: #e2e2e2;
+}
