--- a/public/src/wechat/components/section/section.less
+++ b/public/src/wechat/components/section/section.less
@@ -31,7 +31,6 @@
     background-color: @content-background-color;
     line-height: unit( 30px / @rem-design-unit, rem );
     margin-bottom: unit( 30px / @rem-design-unit, rem );
-    padding: unit( 25px / @rem-design-unit, rem ) unit( 30px / @rem-design-unit, rem );
 }
 
 .section-column{
@@ -63,6 +62,7 @@
 .section-column-img-wrap{
     display: block;
     overflow: hidden;
+    border-radius: 0.12rem;
 }
 
 .section-column-img{
