--- a/public/src/wechat/pages/official.less
+++ b/public/src/wechat/pages/official.less
@@ -72,6 +72,9 @@
 
 .resource-type-list{
     overflow: hidden;
+    background-color: #d3d3d3;
+    padding-top: unit( 10px / @rem-design-unit, rem );
+    padding-bottom: unit( 10px / @rem-design-unit, rem );
 }
 
 .resource-type-item{
@@ -81,7 +84,6 @@
 }
 
 .resource-type-link{
-    margin-top: unit( 20px / @rem-design-unit, rem );
     display: block;
 }
 
