--- a/public/src/wechat/components/header/header.less
+++ b/public/src/wechat/components/header/header.less
@@ -8,7 +8,7 @@
     position: fixed;
     text-align: center;
     height: @header-height;
-    background-color: rgb(0, 184, 252);
+    background-color: #468EE8;
 }
 
 .logo{
