--- a/public/src/wechat/pages/vote.less
+++ b/public/src/wechat/pages/vote.less
@@ -106,13 +106,18 @@ html{
 
 .section-content {
     .section-link {
+        background-color: #d3d3d3;
+
         .section-column-title {
             width: 50%;
             display: inline-block;
+            .active-title{
+                color: #004493;
+            }
         }
 
         .section-column-title-link{
-            color: #004493;
+            color: #666;
         }
     }
 
